<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pdr_cl_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_75_transparent"
        android:visibility="visible">

    <TextView
            android:id="@+id/pdr_tv_info"
            android:text="@string/choose_start_date_and_end_date_up_to_14_days_to_get_movies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
    />


    <TextView
            android:id="@+id/textView"
            android:text="@string/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pdr_tv_start_date"
            app:layout_constraintBottom_toBottomOf="@+id/pdr_tv_start_date"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
    />
    <TextView
            android:id="@+id/pdr_tv_start_date"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:background="@drawable/rounded_box"
            android:hint="@string/yyyy_mm_dd"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pdr_tv_info"
            app:layout_constraintStart_toEndOf="@+id/textView"/>
    <TextView
            android:id="@+id/pdr_tv_end_date"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:background="@drawable/rounded_box"
            android:hint="@string/yyyy_mm_dd"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/pdr_tv_start_date"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="@+id/pdr_tv_start_date"  />
    <TextView
            android:id="@+id/textView4"
            android:text="@string/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/pdr_tv_end_date"
            app:layout_constraintTop_toTopOf="@+id/pdr_tv_end_date"
            app:layout_constraintStart_toStartOf="@+id/textView"
    />
    <Button
            android:id="@+id/pdr_btn_ok"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/pdr_tv_end_date"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>